kub-brandsSource-service-boot2/k8s/all-kubBrandsSource-green-v2-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-kub-brandssource-service
  labels:
    app: kub-brandssource-service
spec:
  selector:
    app: kub-brandssource-service
    version: "1.1"
  type: LoadBalancer
  ports:
  - name: http
    port: 8070
    targetPort: 8070
    nodePort: 31004
  - name: https
    port: 443
    targetPort: 8443
    nodePort: 31005
    
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dp-kub-brandssource-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kub-brandssource-service
        version: "1.1"
    spec:
      containers:
      - name: kub-brandssource-service
        image: ddas55/kub-brandssource-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8070
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: vm-kub-brandssource-appprops
          mountPath: "/config/" 
          readOnly: true
        volumeMounts:
        - name: vm-kub-brandssource-bootstrap
          mountPath: "/config/bootstrap" 
          readOnly: true
        volumeMounts:
        - name: vm-kub-brandssource-apppropsprod
          mountPath: "/config/prod" 
          readOnly: true
        livenessProbe:
          httpGet:
            path: /svcbrands/brands/healthz
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /svcbrands/brands/rediness
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 5
      volumes:
      - name: vm-kub-brandssource-appprops
        configMap:
          name: cm-kub-brandssource-app
          items:
          - key: application.properties 
            path: application.properties
      - name: vm-kub-brandssource-bootstrap
        configMap:
          name: cm-kub-brandssource-bootstrap
          items:
          - key: bootstrap.properties 
            path: bootstrap.properties
      - name: vm-kub-brandssource-apppropsprod
        configMap:
          name: cm-kub-brandssource-apppropsprod
          items:
          - key: application-prod.properties 
            path: application-prod.properties
