kub-brandsSource-service-boot2/k8s/svc-kubBrandsSource-green-v2-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-kub-brandssource-service
  labels:
    app: kub-brandssource-service
spec:
  selector:
    app: kub-brandssource-service
    version: "1.1"
  type: LoadBalancer
  ports:
  - name: http
    port: 8070
    targetPort: 8070
    nodePort: 31004
  - name: https
    port: 443
    targetPort: 8443
    nodePort: 31005
    
#The port here is an abstract service port, which will allow any other resources to access the service within the cluster. 
#The nodePort will be indicating the external port to allow external access. 
#The targetPort is the port the container allows traffic into; by default, it will be the same port.

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: basic-ingress
#spec:
#  backend:
#    serviceName: svc-brands
#    servicePort: 8070

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: ing-brands
#spec:
#  rules:
#  - http: 
#     paths:
#      - path: /svcbrands
#        backend:
#          serviceName: svc-brands
#          servicePort: 8070
##      - path: /bar
##        backend:
##          serviceName: s2
##          servicePort: 80
