kub-brandsSource-service-boot2/k8s/ingress-kubBrandsSource-green.yaml
#use annotation rewrite-target to guarantee that traffic redirection starts from root, /.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-brandssource-service
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dd.k8s.io
      http:
        paths:
          - path: /svcbrands
            backend:
              serviceName: svc-kub-brandssource-service
              servicePort: 8070
          - path: /echoserver
            backend:
              serviceName: echoserver-svc
              servicePort: 8080
