kub-brandsSource-service-boot2/k8s/ingress-kubBrandsSource-old.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-brandssource-service
spec:
  rules:
  - http: 
     paths:
      - path: /svcbrands
        backend:
          serviceName: svc-kub-brandssource-service
          servicePort: 8070
